pkg/lang/testdata/ub/body-meta/valid/resource-configurations.ub
resources: { aws.vpc.this: { @configurations: { aws: aws.east } } }
