pkg/lang/testdata/ub/body-meta/invalid/resource-every-bad-key.ub
resources: { aws.vpc.this: { @bogus: 1, @nope: 2 } }
